--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,35 +1,63 @@
+html { overflow-y: scroll; 
+  height: 100%;
+}
+body { padding-bottom: 70px; }
+
 .container-fluid {
-    padding-top: 70px;
-    padding-bottom: 70px;
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 .navbar {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border: 0;
-    border-radius: 0;
-    margin-bottom: 0;
-    font-size: 12px;
-    letter-spacing: 5px;
+  
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 0;
+  border-radius: 0;
+  margin-bottom: 0;
+  font-size: 12px;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+
 }
-.navbar-nav  li a:hover {
-    color: #1abc9c !important;
+.navbar-nav li a:hover {
+  color: #1abc9c !important;
 }
 
+
 .footer-padding {
-	padding-bottom: 60px;
+  padding-bottom: 60px;
 }
 
 .footer {
-	position: absolute;
-	text-align: center;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-	background-color: #1abc9c;
+  display: inline-flex;
+  text-align: center;
+  background-color: #1abc9c;
+  justify-content: center;
+  /* bottom: 0;
+  width: 100%; */
 }
 
 .footer p {
-	margin-top: 25px;
-	font-size: 12px;
+  margin: 25px 10px;
+
+  font-size: 14px;
   color: #fff;
+}
+.footer a {
+  color: #fff;
+}
+#logout a {
+  color: red;
+}
+
+.reg-reminder {
+  font-size: 15px;
+  padding: 10px 0px;
+}
+.reg-reminder a {
+  color: #1abc9c;
+}
+.btn-dark:hover{
+  color: #fff;
+  background-color: #1abc9c;
 }
