--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,39 +4,47 @@
   <h1>Login</h1>
 
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-5">
       <div class="card">
         <div class="card-body">
-
           <!-- Makes POST request to /login route -->
           <form action="/login" method="POST">
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
+              <input type="email" class="form-control" name="username" />
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password">
+              <input type="password" class="form-control" name="password" />
             </div>
             <button type="submit" class="btn btn-dark">Login</button>
           </form>
-
+          <p class="reg-reminder">
+            create a new account! click here to
+            <a href="/register">register</a>!
+          </p>
         </div>
       </div>
-    </div>
 
-    <div class="col-sm-4">
       <div class="card">
         <div class="card-body">
-          <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
-            <i class="fab fa-google"></i>
-            Sign In with Google
-          </a>
+          <div class="form-group">
+            <a
+              class="btn btn-block btn-social btn-google btn-lg"
+              href="/auth/google"
+              role="button"
+            >
+              <i class="fa fa-google"> </i>
+              Login with Google
+            </a>
+           
+          </div>
         </div>
       </div>
     </div>
-
   </div>
 </div>
 
-<%- include('partials/footer') %>
+<%- include('partials/footer') %> 
+
+
