--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,15 @@
 </div>
+
 <div class="footer-padding"></div>
-  <div class="footer">
-    <p>Made with ❤️ by Lujain Alajmi 2021</p>
-  </div>
-</div>
+  <nav class="footer navbar-fixed-bottom"">
+    <p> <a href="https://github.com/LujainAlajmi">Made with ❤️ by Lujain Alajmi</a></p>
+    <p> <a href="/about">About Us</a></p>
+    <p> <a href="/contact">Contact Us</a></p>
+  </nav>
+
 </body>
+ <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+          
 </html>
