added Affirmation api to home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <%- include("partials/header"); -%>
 <h1>Welcome <%= startingContent %></h1>
+<p> <%= newAffirmation %>!  </p>
 
 <% posts.forEach(function(post){%>
 
