--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 
 <% posts.forEach(function(post){%>
 
-<h1><%= post.title %></h1>
+<h1><%= post.title %> <span class="smallFont"> <%= post.createdAt.toDateString() %> </h1>
 <p>
   <%=post.content.substring(0,100) + "..." %>
   <a href="/posts/<%=post.title%> ">Read More</a>
